--- a/homepage_merge1.CSS
+++ b/homepage_merge1.CSS
@@ -665,8 +665,14 @@ span {
 }
 
 @media only screen and (min-width: 780px) and (max-width: 1080px) {
-  .container {
+  #container {
     grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media only screen and (min-width: 0px) and (max-width: 365px) {
+  #container {
+    grid-template-columns: repeat(1, 1fr);
   }
 }
 .Bigbox {
@@ -757,6 +763,8 @@ span {
 #our_product_part2 {
   background-color: rgb(255, 255, 255);
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  margin: auto;
+  width: 95%;
   padding-top: 20px;
   margin-top: 50px;
 }
