--- a/freetraildemo.css
+++ b/freetraildemo.css
@@ -1,5 +1,3 @@
-#parentdiv > div {
-}
 #main {
   grid-area: a;
   align-content: center;
@@ -76,6 +74,13 @@
   margin: auto;
   line-height: 2em;
   margin-top: 20%;
+  margin-bottom: 2px;
+}
+p > img {
+  border-radius: 40%;
+  width: 30%;
+  object-fit: contain;
+  margin-top: 2px;
 }
 #footer > div {
   justify-content: space-between;
@@ -116,6 +121,10 @@
       "i"
       "f";
   }
+
+  #heading > p {
+    font-size: x-small;
+  }
 }
 @media only screen and (min-width: 0px) and (max-width: 375px) {
   #parentdiv {
@@ -148,5 +157,8 @@
     padding-left: 0%;
     display: initial;
     justify-content: initial;
+  }
+  #heading > p {
+    font-size: xx-small;
   }
 }
