--- a/product.css
+++ b/product.css
@@ -122,8 +122,13 @@ margin-bottom: 80px;
 #Marketing_heading_text{
     text-align: center;
     color: white;
-    margin-left: 30px;
+  
     background-color: #ef7154;
+    height: 100%;
+    width: 200px;
+    font-size: 20px;
+    padding: 5px 10px;
+   
 }
 #logo_box{
     width: 300px;
@@ -157,10 +162,10 @@ margin-bottom: 80px;
     
 }
 #create_calender_button{
-   height: 30%;
+   height: 60%;
    width: 200px;
    font-size: 20px;
-   margin-top: 40px;
+  margin-top: 100px;
    border: 1px solid  #ef7154;
    background-color:  #ef7154;
    color: white;
@@ -255,7 +260,11 @@ margin-bottom: 80px;
     height: 30%;
     /* border: 1px solid rgb(165, 116, 42); */
     text-align: center;
-    margin-top: 100px;
+    margin-bottom: 100px;
+    font-family: "Merriweather",serif;
+    font-weight: 10;
+    font-style: italic;
+   
 }
 .header_h1{
     color: #544b4b;
@@ -279,6 +288,7 @@ margin-bottom: 80px;
     font-size: 17px;
     color: #726e6d;
 }
-.footer_h1{
-  
+  .choco{
+    margin-top: -30px;
+    font-size: 15px;
 }
